Thu Apr  4 02:11:30 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (w_extended): check for prepended object.
	  [ruby-core:53206] [Bug #8043]

Wed Mar 27 03:02:30 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* vm_exec.c: Correct predefined macro name. This typo is introduced by
	  r36534 and should be backported to ruby_2_0_0.

Wed Mar 27 02:58:44 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* Merge Onigmo 0fe387da2fee089254f6b04990541c731a26757f
	  v5.13.3 [Bug#7972] [Bug#7974]

Wed Mar 27 02:53:53 2013  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/document.rb: move entity_expansion_text_limit accessor to ...
	* lib/rexml/rexml.rb: ... here to make rexml/text independent from
	  REXML::Document. It causes circular require.
	* lib/rexml/document.rb (REXML::Document.entity_expansion_text_limit):
	  deprecated.
	* lib/rexml/document.rb (REXML::Document.entity_expansion_text_limit=):
	  deprecated.
	* lib/rexml/text.rb: add missing require "rexml/rexml" for
	  REXML.entity_expansion_text_limit.
	  Reported by Robert Ulejczyk. Thanks!!! [ruby-core:52895] [Bug #7961]

Wed Mar 27 02:50:45 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* object.c (Init_Object): remove Module#used, which has been
	  introduced in Ruby 2.0 by mistake.  [Bug #7916] [ruby-core:52719]

Mon Mar 25 02:02:15 2013  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c: edited rdoc.
	* rational.c: ditto.

Mon Mar 25 02:02:15 2013  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c: described syntax of string form.
	* rational.c: ditto.

Mon Mar 25 01:26:26 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/webrick/httpproxy.rb: Fix typos in HTTPProxyServer [Bug #8013]
	  Patch by Nobuhiro IMAI [ruby-core:53127]

Mon Mar 25 01:09:48 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_compile_each): pass keyword arguments to zsuper,
	  with current values.  [ruby-core:53114] [Bug #8008]

Mon Mar 25 01:05:15 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
