@@ -1,3 +1,9 @@
+Thu Apr  4 02:24:59 2013  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* Merge Onigmo d4bad41e16e3eccd97ccce6f1f96712e557c4518.
+	  fix lookbehind assertion fails with /m mode enabled. [Bug #8023]
+	  fix \Z matches where it shouldn't. [Bug #8001]
+
 Thu Apr  4 02:11:30 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* marshal.c (w_extended): check for prepended object.
